--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ input{
   text-align:center;
 }
 
-h1{font-size:2.4em;}
+h1{font-size:2.3em;}
 p{max-width:620px;margin:auto;font-size:1.1em;}
 
 .glow{
@@ -80,17 +80,31 @@ p{max-width:620px;margin:auto;font-size:1.1em;}
   height:60vh;
   border:2px dashed white;
   margin-top:20px;
+  overflow:hidden;
 }
 .gameHeart{
   position:absolute;
   font-size:34px;
   cursor:pointer;
-  animation:pulse 1s infinite;
+  animation:pulse 1s infinite, moveAround 3s linear infinite;
 }
+.fakeHeart{
+  filter:grayscale(100%);
+  opacity:0.7;
+}
+
 @keyframes pulse{
   0%{transform:scale(1);}
   50%{transform:scale(1.3);}
   100%{transform:scale(1);}
+}
+
+@keyframes moveAround{
+  0%{transform:translate(0,0);}
+  25%{transform:translate(30px,-20px);}
+  50%{transform:translate(-20px,20px);}
+  75%{transform:translate(20px,30px);}
+  100%{transform:translate(0,0);}
 }
 
 /* fireworks */
@@ -123,13 +137,12 @@ p{max-width:620px;margin:auto;font-size:1.1em;}
   <source src="song.mp3" type="audio/mpeg">
 </audio>
 
-<!-- SECRET PAGE -->
+<!-- SECRET -->
 <section class="active" id="s0">
   <h1>🔐 Private Access</h1>
   <input id="code" placeholder="Secret code">
   <br>
   <button onclick="checkCode()">Enter</button>
-
   <h2 style="margin-top:30px;">🎂 Birthday Countdown</h2>
   <p id="timer"></p>
 </section>
@@ -145,7 +158,7 @@ p{max-width:620px;margin:auto;font-size:1.1em;}
 <section id="s2">
   <h1>Memory 📸</h1>
   <div class="gallery">
-    <img src="muskan.jpg" alt="Muskan">
+    <img src="muskan.jpg">
   </div>
   <button onclick="next(3)">Next</button>
 </section>
@@ -153,9 +166,13 @@ p{max-width:620px;margin:auto;font-size:1.1em;}
 <!-- GAME -->
 <section id="s3">
   <h1>Collect 29 Hearts 💖</h1>
-  <p>Time Left: <span id="time">30</span>s</p>
+  <p>Time Left: <span id="time">50</span>s</p>
   <div id="gameArea"></div>
-  <p>Score: <span id="score">0</span> / 29</p>
+  <p>Score: <span id="score">0</span> / <span id="total">29</span></p>
+
+  <div style="width:80%;margin:15px auto;background:#333;border-radius:20px;">
+    <div id="progressBar" style="width:0%;height:14px;background:#ff4d6d;border-radius:20px;"></div>
+  </div>
 </section>
 
 <!-- BIRTHDAY -->
@@ -165,6 +182,9 @@ p{max-width:620px;margin:auto;font-size:1.1em;}
 </section>
 
 <script>
+const TOTAL_HEARTS = 29;
+document.getElementById("total").innerText = TOTAL_HEARTS;
+
 let music=document.getElementById("bgm");
 music.volume=0;
 
@@ -185,7 +205,7 @@ function toggleMusic(){
 let birthdayUnlocked=false;
 
 function checkCode(){
-  if(code.value==="14052018"){
+  if(code.value==="0802"){
     music.play();
     fadeInMusic();
     next(1);
@@ -204,7 +224,7 @@ function next(n){
   if(n===4) fireworks();
 }
 
-/* floating hearts */
+/* hearts background */
 setInterval(()=>{
   let h=document.createElement("div");
   h.className="heart";
@@ -232,15 +252,18 @@ setInterval(()=>{
 },1000);
 
 /* GAME */
-let score=0,time=30,gameInterval,timerInterval;
+let score=0,time=50,gameInterval,timerInterval;
+let speed=800;
 
 function startGame(){
-  score=0; time=30;
+  score=0; time=50; speed=800;
   scoreSpan.innerText=score;
   timeSpan.innerText=time;
+  progressBar.style.width="0%";
   gameArea.innerHTML="";
 
-  gameInterval=setInterval(spawnHeart,600);
+  gameInterval=setInterval(spawnHeart,speed);
+
   timerInterval=setInterval(()=>{
     time--;
     timeSpan.innerText=time;
@@ -254,27 +277,47 @@ function startGame(){
 
 function spawnHeart(){
   let h=document.createElement("div");
+  let isFake = Math.random()<0.25;
+
   h.className="gameHeart";
-  h.innerHTML="💖";
+  h.innerHTML=isFake?"💔":"💖";
+  if(isFake) h.classList.add("fakeHeart");
+
   h.style.left=Math.random()*85+"%";
   h.style.top=Math.random()*75+"%";
+
   h.onclick=()=>{
-    score++;
+    if(isFake){
+      score=Math.max(0,score-2);
+    }else{
+      score++;
+    }
+
     scoreSpan.innerText=score;
+    progressBar.style.width=(score/TOTAL_HEARTS*100)+"%";
     h.remove();
-    if(score===29){
+
+    if(score>0 && score%5===0 && speed>300){
+      clearInterval(gameInterval);
+      speed-=100;
+      gameInterval=setInterval(spawnHeart,speed);
+    }
+
+    if(score===TOTAL_HEARTS){
       birthdayUnlocked=true;
       clearInterval(gameInterval);
       clearInterval(timerInterval);
       next(4);
     }
   };
+
   gameArea.appendChild(h);
-  setTimeout(()=>h.remove(),1500);
+  setTimeout(()=>h.remove(),2000);
 }
 
 const scoreSpan=document.getElementById("score");
 const timeSpan=document.getElementById("time");
+const progressBar=document.getElementById("progressBar");
 
 /* fireworks */
 function fireworks(){
