--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ p{max-width:620px;margin:auto;font-size:1.1em;}
 <!-- AI -->
 <section id="s1">
   <h1 class="glow">Muskan 💖</h1>
-  <p>AI Result: One of a kind ✨</p>
+  <p>My: One of a kind ✨</p>
   <button onclick="next(2)">Continue</button>
 </section>
 
